--- a/templates/studentdataadmin.html
+++ b/templates/studentdataadmin.html
@@ -7,7 +7,7 @@
 <hr>
 <div class="tochange">
   <div class="tableheader">
-    <p class="programname">Award of Certificate of Attendance Cows in Metaphysical Sciences</p>
+    <p class="programname">Award of Certificate of Attendance in Metaphysical Sciences</p>
     <select class="programnamelist" id="">
       <option value="">ALL</option>
       <option value="">ACAMS</option>
