--- a/templates/studentdetailstemplate.html
+++ b/templates/studentdetailstemplate.html
@@ -50,6 +50,11 @@
     
       <div class="program_details">
             {{ template "admin_dash_acams"}}
+            {{ template "admin_dash_acms"}}
+            {{ template "admin_dash_adms"}}
+            {{ template  "admin_dash_abdms"}}
+
+
       </div>
     
     </div>
@@ -68,74 +73,94 @@
             <th>Course Name</th>
             <th>Exam</th>
             <th>Record Result</th>
+            <th>Complete</th>
+            
         </tr>
         </thead>
         <tbody>
             <tr>
                 <td>1</td>
                 <td>Communication Skills</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr>
             <tr>
                 <td>2</td>
                 <td>Public Speaking</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr><tr>
                 <td>3</td>
                 <td>Intuition</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr>
             <tr>
                 <td>4</td>
                 <td>Understanding Religions of the World</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr><tr>
                 <td>5</td>
                 <td>Public Relations</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr><tr>
                 <td>6</td>
                 <td>Anger Management</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr><tr>
                 <td>7</td>
                 <td>Connecting With Angels</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr>
             <tr>
                 <td>8</td>
                 <td>Critical Thinking</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr>
             <tr>
                 <td>9</td>
                 <td>Financial Education</td>
-                <td>Pedding</td>
-                <td>Pedding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                <td>Pendding</td>
+                
 
 
             </tr>
@@ -147,4 +172,512 @@
             <p>Update Program Data</p>
         </div>
     </div>
+{{end}}
+
+
+
+{{define "admin_dash_acms"}}
+<h5 class="program_name">AWARD OF CERTIFICATE IN METAPHYSICAL SCIENCES</h5>
+                
+<div class="program_table">
+    <table>
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>Course Name</th>
+        <th>Exam</th>
+        <th>Record Result</th>
+        <th>Complete</th>
+        
+    </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Mindfulness</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Dreams and Dreaming</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>3</td>
+            <td>Energy of Money</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Crystals and Gemstones</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>5</td>
+            <td>Forgiveness</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>6</td>
+            <td>Cleansing and Fasting</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>7</td>
+            <td>Astrology</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>African Culture and Traditions</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Financial Education</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        </tbody>
+    </table>
+    </div>
+    <div class="update_div">
+        <div class="update_btn">
+            <p>Update Program Data</p>
+        </div>
+</div>
+
+{{end}}
+
+
+{{ define "admin_dash_adms"}}
+<h5 class="program_name">AWARD OF DIPLOMA IN METAPHYSICAL SCIENCES</h5>
+                
+<div class="program_table">
+    <table>
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>Course Name</th>
+        <th>Exam</th>
+        <th>Record Result</th>
+        <th>Complete</th>
+        
+    </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Course</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Understanding Miracles</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Channeling Skills</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>4</td>
+            <td>Enneagram</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Mythology on Gods and Goddess</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>6</td>
+            <td>Herbs</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>7</td>
+            <td>Meditation Skills</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>8</td>
+            <td>Mantras and Mudras</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Divinations</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>Archetypes</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>Basic Reaserch</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>Understanding Propaganda</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>Great Spiritual Teachers</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td>Reprograming</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>Shamanism</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>Mystery Schools in the World</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>17</td>
+            <td>Law and Ethics in Metaphysical Sciences</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>Non Violent Communication</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        </tbody>
+    </table>
+    </div>
+    <div class="update_div">
+        <div class="update_btn">
+            <p>Update Program Data</p>
+        </div>
+</div>
+
+{{end}}
+
+{{ define "admin_dash_abdms"}}
+<h5 class="program_name">AWARD OF BACHELORS'S DEGREE IN METAPHYSICAL SCIENCES</h5>
+                
+<div class="program_table">
+    <table>
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>Course Name</th>
+        <th>Exam</th>
+        <th>Record Result</th>
+        <th>Complete</th>
+        
+    </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Causes and Core Issues in Beliefs</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Emotional Well Being</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>3</td>
+            <td>The Art of Breathing</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Spiritual symbols and colours</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>5</td>
+            <td>Psychic Skills</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>6</td>
+            <td>Shadow Work</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr><tr>
+            <td>7</td>
+            <td>The Craft</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Hypnosis and Beyond</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Mysterious experinces</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>Manifestation of Skills</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+
+
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>Unlocking Creative</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>Transpersonal Counselling</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>African Healing Arts</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td>Ceremonies of the World</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>Mother Earth</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>The Art of Placement</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>17</td>
+            <td>Chakras and Auras</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>Transforming personalities</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>19</td>
+            <td>Mayan Calender</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>20</td>
+            <td>Polarity Therapy</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>21</td>
+            <td>Introduction To Meditation</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>22</td>
+            <td>Health and Nutrition</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        <tr>
+            <td>23</td>
+            <td>Setting up a business</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+            <td>Pendding</td>
+        </tr>
+        </tbody>
+    </table>
+    </div>
+    <div class="update_div">
+        <div class="update_btn">
+            <p>Update Program Data</p>
+        </div>
+</div>
+
 {{end}}
