--- a/templates/studentportal.html
+++ b/templates/studentportal.html
@@ -25,13 +25,16 @@
         
     </header>
     <main>
+        <div class="registrationapproval">
+            
+        </div>
         <div class="programs">
             {{template "acamstable"}}
           
         </div>
         <div class="proceed_div">
             <div class="proceed_btn"> 
-                <a href="#">Proceed</a>
+                <a href="/procced/{{.ACAMSCourse.Student_UUID}}">Proceed</a>
             </div>
         </div>
     </main>
